CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

#---------------------------------------------------------------------------------------------------------------
# ENVIRONMENT
#---------------------------------------------------------------------------------------------------------------
IF(NOT ENVIRONMENT_FOUND)
    FIND_PATH(CMAKE_ENVIRONMENT_DIR environment.cmake PATHS . .. ../.. ../../.. PATH_SUFFIXES cmake_environment NO_DEFAULT_PATH)
    INCLUDE(${CMAKE_ENVIRONMENT_DIR}/environment.cmake)
ENDIF()

#---------------------------------------------------------------------------------------------------------------
# PROJECT
#---------------------------------------------------------------------------------------------------------------
PROJECT(vecprof VERSION 1.0 LANGUAGES CXX)

#---------------------------------------------------------------------------------------------------------------
# DEPENDENCIES
#---------------------------------------------------------------------------------------------------------------
FIND_PACKAGE(Qt4 REQUIRED COMPONENTS QtCore)

#---------------------------------------------------------------------------------------------------------------
# SOURCES
#---------------------------------------------------------------------------------------------------------------
FILE(GLOB_RECURSE sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE headers ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)

#---------------------------------------------------------------------------------------------------------------
# TARGETS
#---------------------------------------------------------------------------------------------------------------
ADD_EXECUTABLE(vecprof ${sources} ${headers})
TARGET_LINK_LIBRARIES(vecprof PUBLIC Qt4::QtCore)
TARGET_INSTALL_RUNTIME(vecprof)

#---------------------------------------------------------------------------------------------------------------
# FINALIZE
#---------------------------------------------------------------------------------------------------------------
FINALIZE()
